--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,45 @@
 services:
   backend:
     build: ./backend
-    ports:
-      - "8000:8000"
     env_file:
       - ./backend/.env
     volumes:
       - ./backend:/app
+    networks:
+      - app-network
+    ports:
+      - "8000:8000"
+
   frontend:
     build: .
+    environment:
+      - VITE_PROXY_TARGET=http://backend:8000
+    networks:
+      - app-network
     ports:
       - "5173:5173"
+
+  nginx:
+    image: nginx:alpine
     volumes:
-      - .:/app\
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - app-network
+    ports:
+      - "8080:80"
+
+  cloudflared:
+    image: cloudflare/cloudflared
+    command: tunnel --url nginx:80
+    depends_on:
+      - nginx
+    networks:
+      - app-network
+    restart: unless-stopped
+
+networks:
+  app-network:
+    driver: bridge
