--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,8 @@ events {
 }
 
 http {
-    upstream frontend {
-        server frontend:5173;
-    }
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
     
     upstream backend {
         server backend:8000;
@@ -14,14 +13,11 @@ http {
     server {
         listen 80;
         
+        root /usr/share/nginx/html;
+        index index.html;
+        
         location / {
-            proxy_pass http://frontend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_cache_bypass $http_upgrade;
+            try_files $uri $uri/ /index.html;
         }
         
         location /api/ {
