--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 services:
   backend:
     build: ./backend
+    image: pipe-dream-backend:v1.0
+    container_name: backend
     env_file:
-      - ./backend/.env
+      - .env
     volumes:
       - ./backend:/app
     networks:
@@ -15,6 +17,10 @@ services:
       context: .
       dockerfile: Dockerfile
       target: nginx
+      args:
+        VITE_API_KEY: ${VITE_API_KEY}
+    image: pipe-dream-nginx:v1.0
+    container_name: nginx
     depends_on:
       - backend
     networks:
